(library
 (public_name cf)
 (enabled_if
  (= %{system} macosx))
 (flags (:standard -w -9-27))
 (ctypes
  (external_library_name libCoreFoundation)
  (build_flags_resolver
    (vendored (c_library_flags (-framework CoreFoundation))))
  (type_description
   (instance Type)
   (functor Type_description))
  (function_description
   (concurrency unlocked)
   (instance Function)
   (functor Function_description))
  (generated_types Types_generated)
  (generated_entry_point C)))
